[project]
name = "blueprints-updater"
version = "1.18.0"
description = "Blueprints Updater for Home Assistant"
requires-python = ">=3.14.2"
dependencies = []

[dependency-groups]
dev = [
  "h2",
  "homeassistant>=2026.4",
  "interrogate",
  "packaging",
  "pyright",
  "pytest>=9",
  "pytest-asyncio",
  "pytest-cov",
  "ruff",
  "tomlkit",
  "ty",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "RUF", # ruff-specific rules
  "TID", # flake8-tidy-imports
  "D",   # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest]
asyncio_mode = "auto"
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = ["--cov=custom_components", "--cov-fail-under=90"]

[tool.pyright]
typeCheckingMode = "standard"

[tool.interrogate]
fail-under = 100
ignore_nested_functions = true
exclude = ["tests", "scratch"]
