[project]
name = "blueprints-updater"
version = "2.7.0"
description = "Blueprints Updater for Home Assistant"
requires-python = ">=3.14.2"
dependencies = []

[dependency-groups]
dev = [
  "homeassistant>=2026.5.0",
  "httpx[http2]",
  "interrogate",
  "packaging",
  "prek",
  "pyright",
  "pytest>=9",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-homeassistant-custom-component",
  "pytest-timeout",
  "ruff",
  "tomlkit",
  "ty",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",   # pydocstyle
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "G",   # flake8-logging-format
  "I",   # isort
  "LOG", # flake8-logging
  "N",   # pep8-naming
  "PIE", # flake8-pie
  "PT",  # flake8-pytest-style
  "RET", # flake8-return
  "RUF", # ruff-specific rules
  "SIM", # flake8-simplify
  "TID", # flake8-tidy-imports
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = [
  "--cov=custom_components",
  "--cov-fail-under=90",
  "--timeout=60",
  "--strict-markers",
]
markers = ["real_network: tests that require real network access"]

[tool.pyright]
typeCheckingMode = "standard"

[tool.interrogate]
fail-under = 100
ignore_nested_functions = true
exclude = ["tests", "scratch"]
